fixed event details display on small screens

--- a/app/assets/stylesheets/_main.css.scss
+++ b/app/assets/stylesheets/_main.css.scss
@@ -110,6 +110,11 @@ html {
 .initialHide {
   opacity: 0;
 }
+
+.touch .initialHide {
+  opacity: 1;
+}
+
 .splash-inner {
   display: table;
   height: 100%;
